--- a/xpi/ctr_os_special/linux/overlayextra.css
+++ b/xpi/ctr_os_special/linux/overlayextra.css
@@ -47,6 +47,7 @@
 	  -moz-appearance: none !important;
 	}
 	
+	#TabsToolbar #ctr_appbutton[open] image,
 	#TabsToolbar #ctr_appbutton:hover image{
 	  -moz-appearance: none !important;
 	  background: none !important;
